formatted home pg

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,29 +9,31 @@
 		<h2>Premium quality, comfortable, affordable shoes at one place!</h2>
 		<div id="nav">
 			<div class="nav-buttons">
-				<button><a href="#home"><b>Home</b></a></button>
-				<button><a href="#about"><b>About</b></a></button>
-				<button><a href="#reviews"><b>Reviews</b></a></button>
+				<button><a href="#category"><b>Category</b></a></button>
+				<button><a href="product.html"><b>View Products</b></a></button>
+				<button><a href="about.html"><b>About us</b></a></button>
 
 			</div>
 		</div>
 	</header>
 	<main>
-        <h2>Home Section</h2>
-		<section id="home">
+        <h2>Category</h2> <!--Men, Women, Kids, Sports, Casual, Formal-->
+		<section id="category">
 			
 
         </section>
 
-		<h2>About us</h2><br>
-        <section id="about">
-			
-			
         </section>
 
-		<h2>Customer Reviews</h2>
-		<section id="reviews">
-         
+		<h2>Why Ultrix?</h2>
+		<section id="why">
+			<ul>
+				<li>Value First</li>
+				<li>Highest Quality</li>
+				<li>Secure payment</li>
+				<li>Convenient purchase</li>
+			</ul>
+					
 		</section>
 
 	</main>
