implemented home, about pgs

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -45,10 +45,10 @@
         </div>
 
         <div class="about-images-grid">
-            <img src="imgs/logo3.png" id="ultrixLogo">
-            <img src="imgs/handshake.jpg" id="handshake">
-            <img src="imgs/csCoding.jpeg" id="cs">
-            <img src="imgs/childCoding.jpg" id="childCode">
+            <img src="imgs/logo3.png" id="ultrixLogo" alt="Ultrix Logo">
+            <img src="imgs/handshake.jpg" id="handshake" alt="Handshake">
+            <img src="imgs/csCoding.jpeg" id="cs" alt="CS code">
+            <img src="imgs/childCoding.jpg" id="childCode" alt="Education">
         </div>
         </section>
     </main>
