--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,23 +17,68 @@
 		</div>
 	</header>
 	<main>
-        <h2>Category</h2> <!--Men, Women, Kids, Sports, Casual, Formal-->
+		
 		<section id="category">
-			
+			<h1>Shoe categories</h1><br>
+			<!--Men, Women, Kids, Sports, Casual, Formal-->
+			<div class="category-imgs">
+				
+				<div class="img-caption">
+					<a href="product.html#men"><img src="imgs/men.jpg" alt="Men"></a>
+					<span>Men</span>
+				</div>
+
+				<div class="img-caption">
+					<a href="product.html#women"><img src="imgs/women.jpg" alt="Woman"></a>
+					<span>Women</span>
+				</div>
+
+				<div class="img-caption">
+					<a href="product.html#kids"><img src="imgs/kids.jpg" alt="Kids"></a>
+					<span>Kids</span>
+				</div>
+
+				<div class="img-caption">
+					<a href="product.html#sport"><img src="imgs/sport.jpg" alt="Sports"></a>
+					<span>Sports</span>
+				</div>
+
+				<div class="img-caption">
+					<a href="product.html#casual"><img src="imgs/casual.jpeg" alt="Casual"></a>
+					<span>Casual</span>
+				</div>
+
+				<div class="img-caption">
+					<a href="product.html#formal"><img src="imgs/formal.jpg" alt="Formal"></a>
+					<span>Formal</span>
+				</div>
+			</div>
 
         </section>
 
         </section>
 
-		<h2>Why Ultrix?</h2>
 		<section id="why">
-			<ul>
-				<li>Value First</li>
-				<li>Highest Quality</li>
-				<li>Secure payment</li>
-				<li>Convenient purchase</li>
-			</ul>
-					
+			<h1>Why Ultrix Shoe Palace?</h1>
+			<div class="why-us-imgs">
+				<div class="img-caption">
+				<img src="imgs/value.jpg" alt="Value">
+				<span>Value First</span>
+			</div>
+			<div class="img-caption">
+				<img src="imgs/quality.jpg" alt="Quality">
+				<span>Highest Quality</span>
+			</div>
+			<div class="img-caption">
+				<img src="imgs/securePay.jpg" alt="Secure Payment" id="pay">
+				<span>Secure Payment</span>
+			</div>
+			<div class="img-caption">
+				<img src="imgs/convenience.jpg" alt="Convenience">
+				<span>Convenient Purchase</span>
+			</div>
+			</div>
+			
 		</section>
 
 	</main>
